force-app/main/default/objects/Event__c/fields/Event_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Event_Timezone__c</fullName>
    <label>Event Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/New_York</fullName>
                <label>Eastern Time (ET)</label>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
                <label>Central Time (CT)</label>
            </value>
            <value>
                <fullName>America/Denver</fullName>
                <label>Mountain Time (MT)</label>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
                <label>Pacific Time (PT)</label>
            </value>
            <value>
                <fullName>America/Anchorage</fullName>
                <label>Alaska Time (AKT)</label>
            </value>
            <value>
                <fullName>Pacific/Honolulu</fullName>
                <label>Hawaii Time (HT)</label>
            </value>
            <value>
                <fullName>Europe/London</fullName>
                <label>Greenwich Mean Time (GMT)</label>
            </value>
            <value>
                <fullName>Europe/Paris</fullName>
                <label>Central European Time (CET)</label>
            </value>
            <value>
                <fullName>Asia/Tokyo</fullName>
                <label>Japan Standard Time (JST)</label>
            </value>
            <value>
                <fullName>Asia/Shanghai</fullName>
                <label>China Standard Time (CST)</label>
            </value>
            <value>
                <fullName>Australia/Sydney</fullName>
                <label>Australian Eastern Time (AET)</label>
            </value>
            <value>
                <fullName>UTC</fullName>
                <label>Coordinated Universal Time (UTC)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>